--- a/.obsidian/workspace
+++ b/.obsidian/workspace
@@ -10,7 +10,7 @@
         "state": {
           "type": "markdown",
           "state": {
-            "file": "ko/210117 - 애자일 방법론과 TDD 그리고 BDD.md",
+            "file": "en/210117 - main and master.md",
             "mode": "source"
           }
         }
@@ -53,8 +53,7 @@
       }
     ],
     "direction": "horizontal",
-    "width": 300,
-    "collapsed": true
+    "width": 300
   },
   "right": {
     "id": "4a7767d3fd567546",
@@ -70,7 +69,7 @@
             "state": {
               "type": "backlink",
               "state": {
-                "file": "ko/210117 - 애자일 방법론과 TDD 그리고 BDD.md",
+                "file": "en/210117 - main and master.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -95,8 +94,8 @@
     "width": 406
   },
   "lastOpenFiles": [
-    "210117 - 애자일 방법론과 TDD 그리고 BDD.md",
     "Untitled.md",
+    "210117 - 애자일 방법론과 TDD 그리고 BDD.md",
     "ja/ja-2021-1-17.md",
     "en/en-2021-1-17.md",
     "en/2021-1-17.md",
