Separate references and notes link

--- a/.obsidian/workspace
+++ b/.obsidian/workspace
@@ -11,7 +11,7 @@
           "type": "markdown",
           "state": {
             "file": "JavaScript/210120-Garbage Collection.md",
-            "mode": "preview"
+            "mode": "source"
           }
         }
       }
