--- a/.obsidian/workspace
+++ b/.obsidian/workspace
@@ -10,7 +10,7 @@
         "state": {
           "type": "markdown",
           "state": {
-            "file": "CSS/201011 Creating a Card Effect.md",
+            "file": "Etcera/201004 Productive Box.md",
             "mode": "source"
           }
         }
@@ -40,7 +40,7 @@
             "state": {
               "type": "search",
               "state": {
-                "query": "",
+                "query": "tag:#JavaScript",
                 "matchingCase": false,
                 "explainSearch": false,
                 "collapseAll": false,
@@ -69,7 +69,7 @@
             "state": {
               "type": "backlink",
               "state": {
-                "file": "CSS/201011 Creating a Card Effect.md",
+                "file": "Etcera/201004 Productive Box.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -102,18 +102,18 @@
       }
     ],
     "direction": "horizontal",
-    "width": 532.2669067382812
+    "width": 367.2818298339844
   },
   "lastOpenFiles": [
-    "CSS/2020-10-11-card-effect.md",
-    "temp/css/2020-10-10-css-flex-wrap.md",
-    "temp/algorithm/2020-10-17-divisor.md",
-    "temp/js/2020-12-12-copy-clipboard.md",
-    "temp/js/2020-12-11-split-a-number-from-string.md",
-    "temp/js/2020-11-19-array-insert.md",
-    "temp/js/2020-11-17-divide-integer-by-10.md",
-    "JavaScript/201031 Sort integer array.md",
-    "JavaScript/210119 Object References and Copying.md",
-    "temp/js/2020-10-31-sort-int-array.md"
+    "Etcera/2020-10-04-productive-box.md",
+    "Etcera/2020-10-04-gitpage-custom-domain.md",
+    "Etcera/200811 Mac OS Dev. Enviornment Setup.md",
+    "Etcera/200901 VS Code preview markdown.md",
+    "Etcera/2020-09-01-vscode-preview-markdown copy.md",
+    "Etcera/2020-08-11-mac-dev-env-setup.md",
+    "temp/etc/2020-10-04-productive-box.md",
+    "temp/etc/2020-10-04-gitpage-custom-domain.md",
+    "temp/etc/2020-09-01-vscode-preview-markdown copy.md",
+    "temp/etc/2020-08-11-mac-dev-env-setup.md"
   ]
 }
