--- a/.obsidian/workspace
+++ b/.obsidian/workspace
@@ -4,29 +4,29 @@
     "type": "split",
     "children": [
       {
-        "id": "965348d7896e6aa6",
-        "type": "leaf",
-        "state": {
-          "type": "markdown",
-          "state": {
-            "file": "JavaScript/210125 Constructor, operator 'new'.md",
-            "mode": "preview"
-          }
-        },
-        "group": "520b9fa30e83e99c"
-      },
-      {
-        "id": "812a56a7747aaed8",
+        "id": "efd21757be310752",
         "type": "leaf",
         "active": true,
         "state": {
           "type": "markdown",
           "state": {
-            "file": "JavaScript/210125 Constructor, operator 'new'.md",
+            "file": "History/Korea/장소/210126 경복궁.md",
+            "mode": "preview"
+          }
+        },
+        "group": "bb0247d6383983ac"
+      },
+      {
+        "id": "812a56a7747aaed8",
+        "type": "leaf",
+        "state": {
+          "type": "markdown",
+          "state": {
+            "file": "History/Korea/장소/210126 경복궁.md",
             "mode": "source"
           }
         },
-        "group": "520b9fa30e83e99c"
+        "group": "bb0247d6383983ac"
       }
     ],
     "direction": "vertical"
@@ -83,7 +83,7 @@
             "state": {
               "type": "backlink",
               "state": {
-                "file": "JavaScript/210125 Constructor, operator 'new'.md",
+                "file": "History/Korea/장소/210126 경복궁.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -119,15 +119,15 @@
     "width": 502.2669372558594
   },
   "lastOpenFiles": [
+    "History/Korea/장소/210126 경복궁.md",
+    "History/Korea/인물/210125 정도전.md",
+    "History/Korea/사건/20210125 위화도회군.md",
+    "History/Korea/인물/20210125 정도전.md",
+    "History/Korea/장소/경복궁.md",
+    "History/Korea/장소/Untitled.md",
     "JavaScript/210125 Constructor, operator 'new'.md",
     "JavaScript/210125 Method and 'this'.md",
     "JavaScript/210119 Object References and Copying.md",
-    "JavaScript/210118 Objects.md",
-    "JavaScript/210120 Garbage Collection.md",
-    "Untitled.md",
-    "JavaScript/210122 Method and 'this'.md",
-    "History/Korea/인물/20210125 정도전.md",
-    "History/Korea/사건/위화도회군.md",
-    "JavaScript/201011 Disable selections and Check tagnames.md"
+    "JavaScript/210118 Objects.md"
   ]
 }
