--- a/.obsidian/workspace
+++ b/.obsidian/workspace
@@ -4,29 +4,16 @@
     "type": "split",
     "children": [
       {
-        "id": "6e1c395aa863b9ef",
-        "type": "leaf",
-        "state": {
-          "type": "markdown",
-          "state": {
-            "file": "JavaScript/210126 Optional chaining.md",
-            "mode": "preview"
-          }
-        },
-        "group": "9f89f615504dd0d0"
-      },
-      {
-        "id": "efd21757be310752",
+        "id": "856e30acf122fc23",
         "type": "leaf",
         "active": true,
         "state": {
           "type": "markdown",
           "state": {
-            "file": "JavaScript/210126 Optional chaining.md",
-            "mode": "source"
+            "file": "Ruby/Basic Ruby/210126 Basic #1.md",
+            "mode": "preview"
           }
-        },
-        "group": "9f89f615504dd0d0"
+        }
       }
     ],
     "direction": "vertical"
@@ -84,7 +71,7 @@
             "state": {
               "type": "backlink",
               "state": {
-                "file": "JavaScript/210126 Optional chaining.md",
+                "file": "Ruby/Basic Ruby/210126 Basic #1.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -123,18 +110,18 @@
       }
     ],
     "direction": "horizontal",
-    "width": 523.2669067382812
+    "width": 316.6484375
   },
   "lastOpenFiles": [
+    "Ruby/Basic Ruby/210126 Basic #1.md",
+    "Untitled.md",
+    "Ruby/Basic Ruby/Untitled.md",
     "JavaScript/210126 Optional chaining.md",
     "Node.js/210126 Upgrade Node.md",
     "Node.js/Untitled.md",
     "JavaScript/210125 Constructor, operator 'new'.md",
     "JavaScript/210125 Method and 'this'.md",
     "JavaScript/Untitled.md",
-    "History/Korea/장소/210126 경복궁.md",
-    "ReadingNote/짧고 굵게 일합니다 - 곤도 마리에.md",
-    "ReadingNote/Books.md",
-    "Untitled.md"
+    "History/Korea/장소/210126 경복궁.md"
   ]
 }
