Add ruby - strings and alternative quotes

--- a/.obsidian/workspace
+++ b/.obsidian/workspace
@@ -4,13 +4,13 @@
     "type": "split",
     "children": [
       {
-        "id": "856e30acf122fc23",
+        "id": "587e08f0fec95e1b",
         "type": "leaf",
         "active": true,
         "state": {
           "type": "markdown",
           "state": {
-            "file": "Ruby/Basic Ruby/210126 Hello world.md",
+            "file": "Ruby/Basic Ruby/210127 Strings.md",
             "mode": "preview"
           }
         }
@@ -53,7 +53,8 @@
       }
     ],
     "direction": "horizontal",
-    "width": 350.0121879577637
+    "width": 350.0121879577637,
+    "collapsed": true
   },
   "right": {
     "id": "4a7767d3fd567546",
@@ -70,7 +71,7 @@
             "state": {
               "type": "backlink",
               "state": {
-                "file": "Ruby/Basic Ruby/210126 Hello world.md",
+                "file": "Ruby/Basic Ruby/210127 Strings.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -112,15 +113,15 @@
     "width": 462.6484069824219
   },
   "lastOpenFiles": [
+    "Ruby/Basic Ruby/210127 Strings.md",
+    "Ruby/Basic Ruby/210126 Hello world.md",
+    "Ruby/Basic Ruby/Untitled.md",
     "Ruby/Basic Ruby/210126 Basic #1.md",
     "History/Korea/유적-유물/210127 청화백자.md",
     "ReadingNote/짧고 굵게 일합니다 - 곤도 마리에.md",
     "ReadingNote/Books.md",
     "History/Korea/장소/210126 경복궁.md",
     "History/Korea/인물/210125 정도전.md",
-    "History/Korea/사건/210125 위화도회군.md",
-    "History/Korea/유적-유물/Untitled.md",
-    "JavaScript/210126 Optional chaining.md",
-    "Untitled.md"
+    "History/Korea/사건/210125 위화도회군.md"
   ]
 }
