--- a/.obsidian/workspace
+++ b/.obsidian/workspace
@@ -10,10 +10,23 @@
         "state": {
           "type": "markdown",
           "state": {
-            "file": "Ruby/Basic Ruby/210127 Strings.md",
+            "file": "History/Korea/문화/210128 탕평.md",
+            "mode": "source"
+          }
+        },
+        "group": "5535d4d1594a5428"
+      },
+      {
+        "id": "ce8f0fc84940ad1c",
+        "type": "leaf",
+        "state": {
+          "type": "markdown",
+          "state": {
+            "file": "History/Korea/문화/210128 탕평.md",
             "mode": "preview"
           }
-        }
+        },
+        "group": "5535d4d1594a5428"
       }
     ],
     "direction": "vertical"
@@ -71,7 +84,7 @@
             "state": {
               "type": "backlink",
               "state": {
-                "file": "Ruby/Basic Ruby/210127 Strings.md",
+                "file": "History/Korea/문화/210128 탕평.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -110,18 +123,18 @@
       }
     ],
     "direction": "horizontal",
-    "width": 462.6484069824219
+    "width": 454.26690673828125
   },
   "lastOpenFiles": [
+    "History/Korea/문화/210128 탕평.md",
+    "History/Korea/유적-유물/210127 청화백자.md",
+    "History/Korea/문화/Untitled.md",
     "Ruby/Basic Ruby/210127 Strings.md",
     "Ruby/Basic Ruby/210126 Hello world.md",
     "Ruby/Basic Ruby/Untitled.md",
     "Ruby/Basic Ruby/210126 Basic #1.md",
-    "History/Korea/유적-유물/210127 청화백자.md",
     "ReadingNote/짧고 굵게 일합니다 - 곤도 마리에.md",
     "ReadingNote/Books.md",
-    "History/Korea/장소/210126 경복궁.md",
-    "History/Korea/인물/210125 정도전.md",
-    "History/Korea/사건/210125 위화도회군.md"
+    "History/Korea/장소/210126 경복궁.md"
   ]
 }
