--- a/.obsidian/workspace
+++ b/.obsidian/workspace
@@ -10,23 +10,10 @@
         "state": {
           "type": "markdown",
           "state": {
-            "file": "History/Korea/문화/210128 탕평.md",
-            "mode": "source"
-          }
-        },
-        "group": "5535d4d1594a5428"
-      },
-      {
-        "id": "ce8f0fc84940ad1c",
-        "type": "leaf",
-        "state": {
-          "type": "markdown",
-          "state": {
-            "file": "History/Korea/문화/210128 탕평.md",
+            "file": "Ruby/Basic Ruby/210127 Strings.md",
             "mode": "preview"
           }
-        },
-        "group": "5535d4d1594a5428"
+        }
       }
     ],
     "direction": "vertical"
@@ -66,8 +53,7 @@
       }
     ],
     "direction": "horizontal",
-    "width": 350.0121879577637,
-    "collapsed": true
+    "width": 350.0121879577637
   },
   "right": {
     "id": "4a7767d3fd567546",
@@ -84,7 +70,7 @@
             "state": {
               "type": "backlink",
               "state": {
-                "file": "History/Korea/문화/210128 탕평.md",
+                "file": "Ruby/Basic Ruby/210127 Strings.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -126,14 +112,14 @@
     "width": 454.26690673828125
   },
   "lastOpenFiles": [
+    "Ruby/Basic Ruby/210127 Strings.md",
     "History/Korea/문화/210128 탕평.md",
+    "ReadingNote/짧고 굵게 일합니다 - 곤도 마리에.md",
     "History/Korea/유적-유물/210127 청화백자.md",
     "History/Korea/문화/Untitled.md",
-    "Ruby/Basic Ruby/210127 Strings.md",
     "Ruby/Basic Ruby/210126 Hello world.md",
     "Ruby/Basic Ruby/Untitled.md",
     "Ruby/Basic Ruby/210126 Basic #1.md",
-    "ReadingNote/짧고 굵게 일합니다 - 곤도 마리에.md",
     "ReadingNote/Books.md",
     "History/Korea/장소/210126 경복궁.md"
   ]
