--- a/.obsidian/workspace
+++ b/.obsidian/workspace
@@ -4,38 +4,16 @@
     "type": "split",
     "children": [
       {
-        "id": "ba71021fa402f71f",
-        "type": "split",
-        "children": [
-          {
-            "id": "587e08f0fec95e1b",
-            "type": "leaf",
-            "dimension": 48.278829604130806,
-            "active": true,
-            "state": {
-              "type": "markdown",
-              "state": {
-                "file": "Ruby/Basic Ruby/210128 Here documents.md",
-                "mode": "source"
-              }
-            },
-            "group": "a6c076055bdcf88a"
-          },
-          {
-            "id": "4708b68e3f1fc84b",
-            "type": "leaf",
-            "dimension": 51.72117039586919,
-            "state": {
-              "type": "markdown",
-              "state": {
-                "file": "Ruby/Basic Ruby/210128 Here documents.md",
-                "mode": "preview"
-              }
-            },
-            "group": "a6c076055bdcf88a"
+        "id": "587e08f0fec95e1b",
+        "type": "leaf",
+        "active": true,
+        "state": {
+          "type": "markdown",
+          "state": {
+            "file": "JavaScript/210128 Symbol type.md",
+            "mode": "preview"
           }
-        ],
-        "direction": "horizontal"
+        }
       }
     ],
     "direction": "vertical"
@@ -62,7 +40,7 @@
             "state": {
               "type": "search",
               "state": {
-                "query": "tag:#clipboard",
+                "query": "tag:#JavaScript",
                 "matchingCase": false,
                 "explainSearch": false,
                 "collapseAll": false,
@@ -75,7 +53,8 @@
       }
     ],
     "direction": "horizontal",
-    "width": 350.0121879577637
+    "width": 350.0121879577637,
+    "collapsed": true
   },
   "right": {
     "id": "4a7767d3fd567546",
@@ -92,7 +71,7 @@
             "state": {
               "type": "backlink",
               "state": {
-                "file": "Ruby/Basic Ruby/210128 Here documents.md",
+                "file": "JavaScript/210128 Symbol type.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -131,9 +110,11 @@
       }
     ],
     "direction": "horizontal",
-    "width": 320.6484069824219
+    "width": 485.26690673828125
   },
   "lastOpenFiles": [
+    "JavaScript/210128 Symbol type.md",
+    "JavaScript/Untitled.md",
     "Ruby/Basic Ruby/210128 Here documents.md",
     "Ruby/Basic Ruby/210127 Strings.md",
     "Ruby/Basic Ruby/210126 Hello world.md",
@@ -141,8 +122,6 @@
     "History/Korea/문화/210128 탕평.md",
     "ReadingNote/짧고 굵게 일합니다 - 곤도 마리에.md",
     "History/Korea/유적-유물/210127 청화백자.md",
-    "History/Korea/문화/Untitled.md",
-    "Ruby/Basic Ruby/210126 Basic #1.md",
-    "ReadingNote/Books.md"
+    "History/Korea/문화/Untitled.md"
   ]
 }
