--- a/.obsidian/workspace
+++ b/.obsidian/workspace
@@ -10,7 +10,7 @@
         "state": {
           "type": "markdown",
           "state": {
-            "file": "Ruby/Basic Ruby/210129 ASCII.md",
+            "file": "History/Korea/학문-철학/210129 성리학.md",
             "mode": "preview"
           }
         }
@@ -70,7 +70,7 @@
             "state": {
               "type": "backlink",
               "state": {
-                "file": "Ruby/Basic Ruby/210129 ASCII.md",
+                "file": "History/Korea/학문-철학/210129 성리학.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -112,15 +112,15 @@
     "width": 485.26690673828125
   },
   "lastOpenFiles": [
+    "History/Korea/학문-철학/210129 성리학.md",
+    "History/Korea/장소/210126 경복궁.md",
+    "History/Korea/문화/210128 탕평.md",
+    "History/Korea/사건/210125 위화도회군.md",
+    "History/Korea/유적-유물/210127 청화백자.md",
+    "History/Korea/인물/210125 정도전.md",
+    "History/Korea/학문-철학/Untitled.md",
     "Ruby/Basic Ruby/210129 ASCII.md",
     "Ruby/Basic Ruby/210128 Here documents.md",
-    "Ruby/Basic Ruby/210127 Strings.md",
-    "Ruby/Basic Ruby/210126 Hello world.md",
-    "Ruby/Basic Ruby/Untitled.md",
-    "JavaScript/210128 Symbol type.md",
-    "JavaScript/Untitled.md",
-    "History/Korea/문화/210128 탕평.md",
-    "ReadingNote/짧고 굵게 일합니다 - 곤도 마리에.md",
-    "History/Korea/유적-유물/210127 청화백자.md"
+    "Ruby/Basic Ruby/210127 Strings.md"
   ]
 }
