--- a/.obsidian/workspace
+++ b/.obsidian/workspace
@@ -10,7 +10,7 @@
         "state": {
           "type": "markdown",
           "state": {
-            "file": "History/Korea/학문-철학/210129 성리학.md",
+            "file": "History/Korea/명문장/210130 대한민국 임시 헌장.md",
             "mode": "preview"
           }
         }
@@ -70,7 +70,7 @@
             "state": {
               "type": "backlink",
               "state": {
-                "file": "History/Korea/학문-철학/210129 성리학.md",
+                "file": "History/Korea/명문장/210130 대한민국 임시 헌장.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -109,18 +109,18 @@
       }
     ],
     "direction": "horizontal",
-    "width": 485.26690673828125
+    "width": 543.2669067382812
   },
   "lastOpenFiles": [
+    "History/Korea/명문장/210130 대한민국 임시 헌장.md",
+    "History/Korea/문화/210128 탕평.md",
+    "History/Korea/유적-유물/210127 청화백자.md",
+    "History/Korea/사건/210125 위화도회군.md",
     "History/Korea/학문-철학/210129 성리학.md",
     "History/Korea/장소/210126 경복궁.md",
-    "History/Korea/문화/210128 탕평.md",
-    "History/Korea/사건/210125 위화도회군.md",
-    "History/Korea/유적-유물/210127 청화백자.md",
     "History/Korea/인물/210125 정도전.md",
+    "History/Korea/명문장/Untitled.md",
     "History/Korea/학문-철학/Untitled.md",
-    "Ruby/Basic Ruby/210129 ASCII.md",
-    "Ruby/Basic Ruby/210128 Here documents.md",
-    "Ruby/Basic Ruby/210127 Strings.md"
+    "Ruby/Basic Ruby/210129 ASCII.md"
   ]
 }
